--- a/inventory.css
+++ b/inventory.css
@@ -8,13 +8,34 @@ body {
     margin: 0;
 }
 
+.inventory-icon {
+    display: none;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background-color: rgba(85, 85, 85, 0.8); /* Slight transparency */
+    border: 2px solid purple;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    cursor: pointer;
+    z-index: 1000
+}
+
+.inventory-icon img {
+    width: 90%;
+    height: 90%;
+}
+
+
 .inventory-grid {
     display: none;
     grid-template-columns: repeat(5, 100px);
     grid-gap: 10px;
-    position: fixed;
-    bottom: 20px; 
-    right: 20px; 
+    justify-content: center;
     z-index: 1000;  
 }
 
