--- a/inventory.css
+++ b/inventory.css
@@ -37,6 +37,7 @@ body {
 
 .inventory-grid {
     display: none;
+    position: fixed;
     grid-template-columns: repeat(5, 100px);
     grid-gap: 10px;
     justify-content: center;
