--- a/index.css
+++ b/index.css
@@ -4,6 +4,8 @@ body, html {
   padding: 0;
   overflow: hidden;
 }
+
+
   /* Popup modal styling */
   .modal {
     display: none;
@@ -11,7 +13,7 @@ body, html {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 320px;
+    width: 70%;
     padding: 20px;
     background-color: rgba(10, 10, 30, 0.9); /* Dark background with transparency */
     border-radius: 10px;
