--- a/index.css
+++ b/index.css
@@ -4,8 +4,6 @@ body, html {
   padding: 0;
   overflow: hidden;
 }
-
-
   /* Popup modal styling */
   .modal {
     display: none;
@@ -13,7 +11,7 @@ body, html {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 70%;
+    width: 320px;
     padding: 20px;
     background-color: rgba(10, 10, 30, 0.9); /* Dark background with transparency */
     border-radius: 10px;
